--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
@@ -17,11 +17,11 @@
     }
     </style>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="js/jquery.event.move.js"></script>
     <script src="js/jquery.twentytwenty.js"></script>
 
-    <title>Untitled Document</title>
+    <title>The 20/20 map fork</title>
 </head>
 
 <body>
@@ -36,6 +36,7 @@
     </div>
     <script>
 
+    // important, we slide the cursor to the right!
     $(window).load(function(){
         $(".twentytwenty-container").twentytwenty({
             default_offset_pct: 1
