--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 
     <style>
 
+    body{
+        background-color: #EEE;
+    }
+
     .content{
-        max-width: 1000px;
+        width: 1000px;
+        position: absolute;
+        margin: auto;
+        top:0;
+        left: 0;
+        right:0;
+        bottom: 0;
+        margin-top: 100px;
     }
 
 
